Alterações Gerais de framework e layout

--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^5.0.0-beta.5",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^5.0.0-alpha.44",
     "@mui/material": "^5.0.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "materialize-css": "^1.0.0-rc.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "date-fns": "2.17.0",
+    "normalize.css": "latest",
+    "react": "latest",
+    "react-animated-slider": "^2.0.0",
+    "react-dom": "latest",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
