--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "react-dom": "latest",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "serve": "^12.0.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "react-scripts start",
+"start": "serve -s build",
+"build": "react-scripts build",
+"test": "react-scripts test --env=jsdom",
+"eject": "react-scripts eject",
+"heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": [
